src/objects/Operational_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Actual_amount__c</fullName>
        <label>Actual Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acutal_Date_of_payment__c</fullName>
        <label>Actual Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Planning_ID__c</fullName>
        <label>Business Planning ID</label>
        <referenceTo>Business_Planning__c</referenceTo>
        <relationshipName>RWE_Business_Planning_Financials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contracted_Amount__c</fullName>
        <label>Contracted Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracted_Date_of_Payment__c</fullName>
        <label>Contracted Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Date_of_payment__c</fullName>
        <label>Forecast Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCP_ID__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>HCP ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Category__c</fullName>
        <label>Milestone Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Payment</fullName>
                </value>
                <value>
                    <fullName>Kickoff</fullName>
                </value>
                <value>
                    <fullName>Protocol Draft</fullName>
                </value>
                <value>
                    <fullName>Protocol Final</fullName>
                </value>
                <value>
                    <fullName>IRB/ERB Approval</fullName>
                </value>
                <value>
                    <fullName>Consent Forms</fullName>
                </value>
                <value>
                    <fullName>HCP Professional Services</fullName>
                </value>
                <value>
                    <fullName>HCP Consulting</fullName>
                </value>
                <value>
                    <fullName>HCP Payment Other</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>TFLs</fullName>
                </value>
                <value>
                    <fullName>Data Collection</fullName>
                </value>
                <value>
                    <fullName>Data Analysis</fullName>
                </value>
                <value>
                    <fullName>Draft Deliverable</fullName>
                </value>
                <value>
                    <fullName>Final Deliverable</fullName>
                </value>
                <value>
                    <fullName>Medical Writing</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>Project Planning</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
                <value>
                    <fullName>Pass Thru</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter_Actuals_TF__c</fullName>
        <label>Quarter_Actuals_TF</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Actuals__c</fullName>
        <formula>CASE(MONTH(  Acutal_Date_of_payment__c ), 
1, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q1&quot; , 
2, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q1&quot;, 
3, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q1&quot;, 
4, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q2&quot;, 
5, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q2&quot;, 
6, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q2&quot;, 
7, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q3&quot;, 
8, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q3&quot;, 
9, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q3&quot;, 
10, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q4&quot;, 
11, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q4&quot;, 
12, TEXT(YEAR(Acutal_Date_of_payment__c ))&amp;&quot;-Q4&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter (Actuals)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Contracted_TF__c</fullName>
        <label>Quarter_Contracted_TF</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Contracted__c</fullName>
        <formula>CASE(MONTH( Contracted_Date_of_Payment__c), 
1, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q1&quot; , 
2, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q1&quot;, 
3, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q1&quot;, 
4, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q2&quot;, 
5, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q2&quot;, 
6, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q2&quot;, 
7, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q3&quot;, 
8, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q3&quot;, 
9, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q3&quot;, 
10, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q4&quot;, 
11, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q4&quot;, 
12, TEXT(YEAR(Contracted_Date_of_Payment__c))&amp;&quot;-Q4&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter (Contracted)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Estimate_TF__c</fullName>
        <label>Quarter_Estimate_TF</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Estimate__c</fullName>
        <formula>CASE(MONTH( Estimated_Date_of_payment__c ), 
1, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q1&quot;, 
2, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q1&quot;, 
3, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q1&quot;, 
4, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q2&quot;, 
5, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q2&quot;, 
6, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q2&quot;, 
7, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q3&quot;, 
8, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q3&quot;, 
9, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q3&quot;, 
10, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q4&quot;, 
11, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q4&quot;, 
12, TEXT(YEAR(Estimated_Date_of_payment__c ))&amp;&quot;-Q4&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter (Forecast)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Indication_Actuals_TF__c</fullName>
        <label>Quarter Indication - Actuals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Indication_Estimates_TF__c</fullName>
        <label>Quarter Indication - Estimates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Milestone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variance_Comments__c</fullName>
        <label>Variance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Variance_Reason__c</fullName>
        <label>Variance Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic in our control</fullName>
                </value>
                <value>
                    <fullName>Strategic out of our control</fullName>
                </value>
                <value>
                    <fullName>Operational in our control</fullName>
                </value>
                <value>
                    <fullName>Operational out of our control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <description>difference between the contracted amount and the actual amount (Actual Amount - Contracted Amount)</description>
        <formula>Actual_amount__c-Contracted_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Actual</label>
    <nameField>
        <displayFormat>FN-{0000}</displayFormat>
        <label>Forecast Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valid_Milestone_dates</fullName>
        <active>true</active>
        <description>To validate Estimated date should not be more than Anticipated End Date</description>
        <errorConditionFormula>Estimated_Date_of_payment__c &gt; Business_Planning_ID__r.Estimated_End_Date__c</errorConditionFormula>
        <errorMessage>Milestones cannot have a date that is after the Anticipated End Date of the Study.  Please update the Anticipated End Date of the study/project to a later date.</errorMessage>
    </validationRules>
</CustomObject>